--- a/docs/snaq2.tex
+++ b/docs/snaq2.tex
@@ -34,12 +34,12 @@ Using the set of gene trees, we estimate species network using SNaQ 1.0 and SNaQ
 
 Therefore, we might want to something like this:\\
 \texttt{
-numprocs=10\\
-threads=[4, 8, 12, 16]\\
-probQR=[0.25, 0.5, 0.75]\\
-for th in threads\\
+procs=[4, 8, 12, 16]\\
+probQR=[0, 1/3, 2/3, 1]\\
+propQ=[1, 0.9, 0.7]\\
+for nproc in procs\\
 	for pr in probQR\\
-		julia -t th -p pr\\
+		julia -t nproc -p nproc \\
 		net1=SNaQ 1.0 \# Vanilla vanilla \\ 
 		net1=SNaQ 2.0 \# This parallelizes PL computation plus probQR\\
 		end\\
