--- a/docs/snaq2.tex
+++ b/docs/snaq2.tex
@@ -63,6 +63,8 @@ First option is to replicate the swordflish network reported in the SNaQ 1.0 pap
 
 We might want to use another empirical dataset. Some preferences are the dataset of the biological system where hybridization is well studied, contains estimated set of gene trees, and quite reliable.
 
+Plants? Butterlfies?
+
 \subsection{Submission}
 Currently, software note on Bioinformatics or Methods in Ecology and Evolution seem to be feasible options. We shoot for late December to do this.
 
