--- a/docs/SNaQ 2/manuscript/oup-authoring-template.tex
+++ b/docs/SNaQ 2/manuscript/oup-authoring-template.tex
@@ -120,11 +120,11 @@ as plain as possible.}
 
 %Characteristics of scalability and their impact on performance.
 \section{Introduction}\label{sec1}
-Phylogenetic networks is a acyclic directed graph that generalizes conventional bifurcating phylogenetic trees by allowing two branches to merge at a single node and createing a reticulation. Phylogenetic networks can depict complex biological scenarios that the trees cannot, such as hybrid speciation, introgression, allopolyploid speciation and so on. A hand of computational methods that estimate phylogenetic networkrs from genomic data has been proposed, however, the wide use of networks in practice is hindered by their lack of scalability. Scalability in general refers to the ability of a system to process a growing amount of work in a decreasing or stable amount of tim (Bondi, 2000). Even worse, phylogenetic network estimation belongs to the class of NP-Complete or also NP-Hard problems (non-deterministic polynomial-time). Some attempts to ameliorate this issue has been made previously but the computational burdern is too heavy for dataset size that are typically applied to the tree analyses.
+Phylogenetic network is an acyclic directed graph that generalizes the bifurcating phylogenetic tree by allowing nodes to have indegree of two, thereby creates a reticulation structure \citep{huson2010,kong2022a}. Phylogenetic networks depict complex biological scenarios that the trees cannot, such as hybrid speciation, introgression, allopolyploid speciation, and so on \citep{huson2006}[add the new review paper here]. A handful of computational methods that estimate networks from genomic data has been proposed, however, the wide use of networks in practice is hindered by their lack of scalability which refers to the ability of a system to process a growing amount of work in a decreasing or stable amount of time \citep{bondi2000}. More precisely, phylogenetic network estimation belongs to the class of NP-Hard problems (non-deterministic polynomial-time). Some attempts to ameliorate this issue has been made but the computational requirement is still much higher for the dataset size typically applied to the tree estimation (i.e., tens of taxa).
 
-One way to improve computational efficiency in the network inference is to pre-process the genomic sequence data into a set of gene trees in prior to the network inference, with which many existing methods implements (e.g., PhyloNet, SNaQ, etc.). Computational cost can be further ameliorated by using composite likelihood (or pseudolikelihood) framework, which decomposed the large network in a set of smaller problems (e.g., trees or networks with three or four tips), excecute likelihood computation on each of them, and combine them together to approximate the likelihood of the large network. This approach has been useful in several tree (e.g., MP-EST) and network (e.g., SNaQ, PhyNEST) inference methods and shown to be much faster than computing full likelihood of a topology without compromising accuracy.
+A common strategy to enhance the efficiency of the network inference is to summarize input sequence data into a set of gene trees in prior to the analysis as implemented in many functions in \textsc{PhyloNet} \citep{than2008,wen2018a} or \textsc{SNaQ} \citep{solis-lemus2016} available in Julia package \textsc{PhyloNetworks} \citep{solis-lemus2017}. Computational cost is further ameliorated by using composite likelihood (or pseudolikelihood) that involves decomposition of the network into a set of smaller problems (e.g., triplets or quartets), excecute likelihood computation on each of them, and combine them together to approximate the likelihood of the full network. This approach has been useful in both tree (e.g., \textsc{MP-EST} \citep{liu2010}) and network (e.g., \textsc{SNaQ}, \textsc{PhyNEST} \citep{kong2022c}, \textsc{PhyloNet} \citep{yu2015,zhu2018a}) inference and shown to be much faster than the full likelihood or the Bayesian methods, without compromising accuracy \citep{hejase2016}.
 
-Nevertheless, network inference is still a computationally demanding. It becomes prohibitive for more than 25 taxa using SNaQ, one of the fastest method available, and in practice, it is not uncommon that a network analysis only contains a handful of species (e.g., XXX, YYY, ZZZ) which narrows the scope of biological investigation. Like many existing bioinformatic tools, it is time to make use of different parallelization strategies for network estimation in order to reduce the execution time. In this study, we present SNaQ 2, an network inference method that enhances the computational speed through multithreading and making probabilistic decisions during the inference process. We first present SNaQ and the key improvemetns made in SNaQ2. Then, we present the result of our benchmarks that compares the accuracy and efficiency between SNaQ and SNaQ2; followed by appication of SNaQ2 on empirical datasets. Based on our study, we show that SNaQ2 estimates phylogenetic networks order of magnitude faster than the original SNaQ without compromising accuracy.
+Nevertheless, network inference is still a computationally demanding procedure. It is not uncommon to conduct the analysis with a handful of taxa, which narrows the scope of biological investigation. In this study, we present \textsc{SNaQ2}, a new version of \textsc{SNaQ} with improved computational efficiency via parallelization of the composite likelihood computation and making probabilistic decisions during the network searching heuristics. In the following, we first briefly introduce the essence of the original \textsc{SNaQ} followed by the key improvemetns made in \textsc{SNaQ2}. Then, we present the result of our benchmarks that compares the performance of \textsc{SNaQ} and \text{SNaQ2} and we apply \textsc{SNaQ2} on empirical datasets. Our results clearly demonstrate improved efficiency in \textsc{SNaQ2}.
 
 \section{Methods}\label{sec2}
 \subsection{Original SNaQ}\label{subsec1}
@@ -148,7 +148,7 @@ In the orginal SNaQ, all extracted quartets were used to compute pseudolikelihoo
 \subsubsection{Proposals using quartet weighting}\label{subsubsec2}
 During the network search, one of fives `moves' mentioned above makes a modification in the original topology $N_0$ and propose the new topology $N_1$. All moves, except the move that changes direction of the selected reticulation edge, involves random selection of a tree edge in $N_0$ that will be modified. For example, to move the origin on an existing reticulation edge, a reticulation edge whose head is at a randomly selected reticulation node $u$ is selected at prorbability of $\gamma$, followed by a $random$ selection of a tree edge that will have a new reticulation node in the middle. This stochasticity can result in increased time requires to find the global optimum during the searching process.
 
-We make an improvement in heuristics by selecting the edge via weighted random sampling where the weight is equal to $\Delta CF=\sum^3_{i=1}\left|X_{q_i}-CF_{q_i}\right|$ calculated for every quartet extracted from a network. It can be done for a valid edges to choose from, although not implemented in the method. The rational here is... The new variable that is added to snaq! is probQR (varied from 0.0=full random to 1.0=full weighted).
+We make an improvement in heuristics by selecting the edge via weighted random sampling where the weight is $\Delta CF=\sum^3_{i=1}\left|X_{q_i}-CF_{q_i}\right|$, calculated for every quartet extracted from a network. It can be done for a valid edges to choose from, although not implemented in the method. The rational here is... The new variable that is added to snaq! is probQR (varied from 0.0=full random to 1.0=full weighted).
 
 
 
@@ -193,7 +193,7 @@ WID Server?
 %\bibliographystyle{plain}
 %\bibliography{reference}
 %USE THE BELOW OPTIONS IN CASE YOU NEED AUTHOR YEAR FORMAT.
-%\bibliographystyle{abbrvnat}
-%\bibliography{reference}
+\bibliographystyle{abbrvnat}
+\bibliography{reference}
 
 \end{document}
