--- a/docs/SNaQ 2/manuscript/oup-authoring-template.tex
+++ b/docs/SNaQ 2/manuscript/oup-authoring-template.tex
@@ -128,25 +128,30 @@ Nevertheless, network inference is still a computationally demanding procedure. 
 
 \section{Methods}\label{sec2}
 \subsection{Original SNaQ}\label{subsec1}
-Phylogenetic networks in SNaQ are estimated from multi-locus data using pseudolikelihood. In brief, pseudolikelihood of a network is computed using the likelihood formulas of the quarnets, or four-taxon subnetworks. Since these quarnets are not independent with each other hence the likelihood calculated this approach as \textit{pseudo}-likelihood.
+As mentioned, \textsc{SNaQ} estimates phylogenetic networks from multi-locus data using composite likelihood. While detailed description of the method is available in \cite{solis-lemus2016}, we make a brief description here for readers to understand the improvemetns in \textsc{SNaQ2} in the following subsection. First, \textsc{SNaQ} extracts unrooted quarnet (i.e., networks with four tips) from the full network, and computes expected concordance factor (CF) for each quarnet that represents the proportion of genes whose true relationship is the quartet under the coalescent model. Note there are $4 \choose 2$=3 possible ways to cluster four taxa into two groups of two (i.e., separated by a split). In other words, for a taxon set $X\in\{a,b,c,d\}$ there can be three unrooted quarnets, $q_1$ that contains $a$ and $b$ on one side and $c$ and $d$ on the other, denoted by $q_1=ab|cd$, $q_2=ac|bd$, and $q_3=ad|bc$.
 
-SNaQ utilizes the concordance factor (CF) of a quarnet that refers to the proportion of genes whose true tree displays that quartet. A split divides a quartet into two, where each side of a split contains non-overlapping two taxa, and there are $4 \choose 2$ possible splits. For example, consider a taxon set $X \in \{a,b,c,d\}$, the three splits are $q_1=ab|cd$, $q_2=ac|bd$, and $q_3=ad|bc$. Talk about G, X, CFs
+Given a set of estimated gene trees $G=\{G_1,G_2,\dots,G_g\}$ for $g$ loci, the number of gene trees that match with the each of the three quarnets is denoted $X=(X_{q_1},X_{q_2},X_{q_3})$. Considering $X$ follows a multinomial distribution with probabilities $(CF_{q_1},CF_{q_2},CF_{q_3})$ (i.e., the expected CF for each quarnet) assuming unlinked loci. For a level-1 network with $n\ge4$ taxa, the composite likelihood is computed using:
 
 \begin{equation}
     L=\prod_{s \in S}(CF_{q_1})^{X_{q_1}}(CF_{q_2})^{X_{q_2}}(CF_{q_3})^{X_{q_3}}
+\label{eqn1}
 \end{equation}
 
-Now we have a way to quantify the fit of data onto a phylogenetic networks, the network that maximizes pseudolikelihood is searched using hill climbing algorithm. SNaQ uses one of six `moves' to traverse the network space and jump between different dimensions. The five `moves' are (1) nearest-neighbor interchange, (2) addition (or deletion) of a reticulation, (3) change direction of the reticulation edge, and move (4) the target or (5) the origin of an existing hybridization edge. One of five moves are randomly selected at each iteration.
+\noindent where $S$ is the collection of all quarnets exctracted from the network.
+
+To find the network topology that has the best fit of the observed data, the network space is searched using heuristics.  Five `moves' are implemented to traverse the networks and jump between different dimentions, which are (1) nearest-neighbor interchange (NNI), (2) addition (or deletion) of a reticulation, (3) change direction of the reticulation edge, and move (4) the target or (5) the origin of an existing hybridization edge. At each iteration, one of the randomly selected `move' makes a slight modification to the original topology $N_0$ and propose the new topology $N_1$. \textsc{SNaQ} uses hill climbing algorithm to traverse the network space and to find an optimum. So if the composite likelihood of $N_1$ is greater than $N_0$, $N_0$ is discarded and $N_1$ becomes $N_0$; but the move does not result in $N_1$ with improved composite likelihood, $N_1$ is discarded and another move is applied to $N_0$. This process continues until an optima is reached. 
+
+Since hill climbing only guantees to find the local optimum rather than global optimum, \textsc{SNaQ} executes multiple independent runs, which is typical practice in phylogenetic heuristics. Furthermore, starting topology is modified at some probablility at the onset of the search for exhaustive search. 
 
 \subsection{Improvements in SNaQ2}\label{subsec2}
 \subsubsection{Parallelization of the pseudolikelihood calculation}\label{subsubsec1}
-Original SNaQ make use of parallelization mechanisms by allowing each run on different processors (or cores) using Julia package \textsc{Distributed}. SNaQ2 further improves the computational speed by multithreading pseudolikelihood calculation. In particular, extraction of quartet topologies from a network, calculation of expected CFs of the extracted quartet, calculation of delta CF (i.e., $\sum|CF_{obs_i}-CF_{exp_i}|$ where $i$ corresponds to one of three possible quartet topologies are parallelized. This setting allows to allocate all runs independently on seaprate high-performance computing nodess, with each node fully utilized to parallelize the pseudolikelihood calcuation for the run it is responsible for.
+Original \textsc{SNaQ} makes use of parallelization mechanism by allowing each run on different processors (or cores) using Julia package \textsc{Distributed}. SNaQ2 further improves the computational speed by multithreading the pseudolikelihood calculation. In particular, extraction of quartet topologies from a network, calculation of expected CFs of the extracted quartet, and computation of quarnet likelihood are parallelized. This setting allows to allocate all runs independently on seaprate high-performance computing nodess, with each node fully utilized to parallelize the pseudolikelihood calcuation for the run it is responsible for.
 
 \subsubsection{Sampling subset of quartets for pseudolikelihood}\label{subsubsec3}
 In the orginal SNaQ, all extracted quartets were used to compute pseudolikelihood of a network. While this computation is generally efficient, it may lead to the bottleneck as the number of taxa increases since there are $n choose 4$ quartets in a network. Several studies that also utilizes quartet has shown that subsampling some quartets lead to accurate estimation of a phylogeny (e.g., SVD Quartets). In SNaQ2, we added a new argument \texttt{propQuartets} in the network inference function \texttt{snaq!}. The argument \texttt{propQuartets} specifies the proportion of randomly sampled quartets for the pseudolikelihood calculation (i.e., nonnegative float equal to or smaller than 1). 
 
 \subsubsection{Proposals using quartet weighting}\label{subsubsec2}
-During the network search, one of fives `moves' mentioned above makes a modification in the original topology $N_0$ and propose the new topology $N_1$. All moves, except the move that changes direction of the selected reticulation edge, involves random selection of a tree edge in $N_0$ that will be modified. For example, to move the origin on an existing reticulation edge, a reticulation edge whose head is at a randomly selected reticulation node $u$ is selected at prorbability of $\gamma$, followed by a $random$ selection of a tree edge that will have a new reticulation node in the middle. This stochasticity can result in increased time requires to find the global optimum during the searching process.
+ All moves, except the move that changes direction of the selected reticulation edge, involves random selection of a tree edge in $N_0$ that will be modified. For example, to move the origin on an existing reticulation edge, a reticulation edge whose head is at a randomly selected reticulation node $u$ is selected at prorbability of $\gamma$, followed by a $random$ selection of a tree edge that will have a new reticulation node in the middle. This stochasticity can result in increased time requires to find the global optimum during the searching process.
 
 We make an improvement in heuristics by selecting the edge via weighted random sampling where the weight is $\Delta CF=\sum^3_{i=1}\left|X_{q_i}-CF_{q_i}\right|$, calculated for every quartet extracted from a network. It can be done for a valid edges to choose from, although not implemented in the method. The rational here is... The new variable that is added to snaq! is probQR (varied from 0.0=full random to 1.0=full weighted).
 
