--- a/docs/SNaQ 2/manuscript/reference.bib
+++ b/docs/SNaQ 2/manuscript/reference.bib
@@ -1165,6 +1165,23 @@
   doi = {10.1111/j.1558-5646.1989.tb04233.x}
 }
 
+@article{cui2013,
+  title = {{{PHYLOGENOMICS REVEALS EXTENSIVE RETICULATE EVOLUTION IN}} {{{\emph{XIPHOPHORUS}}}} {{FISHES}}: {{PHYLOGENOMICS OF}} {{{\emph{XIPHOPHORUS}}}} {{FISHES}}},
+  shorttitle = {{{PHYLOGENOMICS REVEALS EXTENSIVE RETICULATE EVOLUTION IN}} {{{\emph{XIPHOPHORUS}}}} {{FISHES}}},
+  author = {Cui, Rongfeng and Schumer, Molly and Kruesi, Karla and Walter, Ronald and Andolfatto, Peter and Rosenthal, Gil G.},
+  year = {2013},
+  month = aug,
+  journal = {Evolution},
+  volume = {67},
+  number = {8},
+  pages = {2166--2179},
+  issn = {00143820},
+  doi = {10.1111/evo.12099},
+  urldate = {2024-05-07},
+  copyright = {http://doi.wiley.com/10.1002/tdm\_license\_1.1},
+  langid = {english}
+}
+
 @article{debevec2013,
   title = {Introduction to {{Phylogenetic Networks}}.---{{David A}}. {{Morrison}}.},
   author = {Debevec, Andrew H. and Whitfield, James B.},
@@ -4603,6 +4620,25 @@
   file = {/Users/khaosan/Zotero/storage/CVQ7KVWL/Reich et al. - 2009 - Reconstructing Indian population history.pdf}
 }
 
+@article{revell2012,
+  title = {Phytools: An {{R}} Package for Phylogenetic Comparative Biology (and Other Things)},
+  shorttitle = {Phytools},
+  author = {Revell, Liam J.},
+  year = {2012},
+  month = apr,
+  journal = {Methods in Ecology and Evolution},
+  volume = {3},
+  number = {2},
+  pages = {217--223},
+  issn = {2041-210X, 2041-210X},
+  doi = {10.1111/j.2041-210X.2011.00169.x},
+  urldate = {2024-05-07},
+  abstract = {Summary                            1.               {\enspace}Here, I present a new, multifunctional phylogenetics package, phytools, for the R statistical computing environment.                                         2.               {\enspace}The focus of the package is on methods for phylogenetic comparative biology; however, it also includes tools for tree inference, phylogeny input/output, plotting, manipulation and several other tasks.                                         3.               {\enspace}I describe and tabulate the major methods implemented in phytools, and in addition provide some demonstration of its use in the form of two illustrative examples.                                         4.               {\enspace}Finally, I conclude by briefly describing an active web-log that I use to document present and future developments for phytools. I also note other web resources for phylogenetics in the R computational environment.},
+  copyright = {http://onlinelibrary.wiley.com/termsAndConditions\#vor},
+  langid = {english},
+  file = {/Users/khaosan/Zotero/storage/5TZ3HRK4/Revell - 2012 - phytools an R package for phylogenetic comparativ.pdf}
+}
+
 @article{rhodes2021,
   title = {{{MSCquartets}} 1.0: Quartet Methods for Species Trees and Networks under the Multispecies Coalescent Model in {{R}}},
   shorttitle = {{{MSCquartets}} 1.0},
@@ -6224,6 +6260,25 @@
   urldate = {2024-04-12},
   abstract = {Gene duplication plays an important role in evolutionary mechanism, which can act as a new source of genetic material in genome evolution. However, detecting duplicate genes from genomic data can be challenging. Various bioinformatics resources have been developed to identify duplicate genes from single and/or multiple species. Here, we summarize the metrics used to measure sequence identity among gene duplicates within species, compare several computational approaches that have been used to predict gene duplicates, and review recent advancements of a Basic Local Alignment Search Tool (BLAST)-based web tool and database, allowing future researchers to easily identify intra-species gene duplications. This article is a quick reference guide for research tools used for detecting gene duplicates.},
   file = {/Users/khaosan/Zotero/storage/25FENNVX/Zhang and Smith - 2022 - An overview of online resources for intra-species .pdf}
+}
+
+@article{zhang2022b,
+  title = {Weighting by {{Gene Tree Uncertainty Improves Accuracy}} of {{Quartet-based Species Trees}}},
+  author = {Zhang, Chao and Mirarab, Siavash},
+  editor = {Takahashi, Aya},
+  year = {2022},
+  month = dec,
+  journal = {Molecular Biology and Evolution},
+  volume = {39},
+  number = {12},
+  pages = {msac215},
+  issn = {0737-4038, 1537-1719},
+  doi = {10.1093/molbev/msac215},
+  urldate = {2024-05-06},
+  abstract = {Abstract             Phylogenomic analyses routinely estimate species trees using methods that account for gene tree discordance. However, the most scalable species tree inference methods, which summarize independently inferred gene trees to obtain a species tree, are sensitive to hard-to-avoid errors introduced in the gene tree estimation step. This dilemma has created much debate on the merits of concatenation versus summary methods and practical obstacles to using summary methods more widely and to the exclusion of concatenation. The most successful attempt at making summary methods resilient to noisy gene trees has been contracting low support branches from the gene trees. Unfortunately, this approach requires arbitrary thresholds and poses new challenges. Here, we introduce threshold-free weighting schemes for the quartet-based species tree inference, the metric used in the popular method ASTRAL. By reducing the impact of quartets with low support or long terminal branches (or both), weighting provides stronger theoretical guarantees and better empirical performance than the unweighted ASTRAL. Our simulations show that weighting improves accuracy across many conditions and reduces the gap with concatenation in conditions with low gene tree discordance and high noise. On empirical data, weighting improves congruence with concatenation and increases support. Together, our results show that weighting, enabled by a new optimization algorithm we introduce, improves the utility of summary methods and can reduce the incongruence often observed across analytical pipelines.},
+  copyright = {https://creativecommons.org/licenses/by/4.0/},
+  langid = {english},
+  file = {/Users/khaosan/Zotero/storage/KT6MIPA8/Zhang and Mirarab - 2022 - Weighting by Gene Tree Uncertainty Improves Accura.pdf}
 }
 
 @article{zheng2018,
