--- a/empirical-cui/output-data-consolidation.ipynb
+++ b/empirical-cui/output-data-consolidation.ipynb
@@ -528,7 +528,7 @@
     "p = scatter(df[:, \"nhybrids\"], df[:, \"negloglik\"], color = df[:, \"whichSNaQ\"], group = df[:, \"whichSNaQ\"],\n",
     "    xlabel = \"nhybrids\", ylabel = \"-loglik\")\n",
     "display(p)\n",
-    "p = scatter(df[:, \"nhybrids\"], df[:, \"runtime\"], color = df[:, \"whichSNaQ\"], group = df[:, \"whichSNaQ\"],\n",
+    "p = scatter(df[:, \"nhybrids\"], df[:, \"log_runtime\"], color = df[:, \"whichSNaQ\"], group = df[:, \"whichSNaQ\"],\n",
     "xlabel = \"nhybrids\", ylabel = \"log2(runtime)\")"
    ]
   },
